cmake_minimum_required(VERSION 3.26)
project(SyrbuOOP)

set(CMAKE_CXX_STANDARD 14)

add_executable(SyrbuOOP
        main.cpp
        TShirt.cpp
        TShirt.h
        Pants.cpp
        Pants.h
        Footwear.cpp
        Footwear.h
        main.cpp
        LongSleeveTShirt.cpp
        LongSleeveTShirt.h
        Sneackers.cpp
        Sneackers.h
        Breedje.cpp
        Breedje.h
        Printable.h)
